--- a/harbingers.tex
+++ b/harbingers.tex
@@ -1,3 +1,6 @@
+% The file name pays homage to White's Viscous Fluid Flow great section title:
+% 3-8.1.2 Harbingers of boundary-layer behavior
+
 \section{Stagnation flow}
 
 In order to provide a glimse into the difficulties that are
