TG vortices figure

--- a/Taylor_Green.tex
+++ b/Taylor_Green.tex
@@ -23,8 +23,17 @@ The pressure field is given by
   p = \frac{\rho u_0^2 }{4} f(t)^2 \left( \cos (2kx) + \cos (2ky) \right) .
 \]
 %
-Hence the vortices go around zones of low pressure, either clockwise
-or counter-clockwise (see Figure \ref{fig:TG}).
+Hence the vortices go around zones of low pressure, either
+clockwise or counter-clockwise (see Figure
+\ref{fig:taylor-green_vortices }.)
+
+
+\begin{figure}
+  \centering
+  \includegraphics[width=0.4\linewidth]{figures/taylor-green_vortices}
+  \caption{Taylor-Green vortices. Contour of iso-pressure (isobars),
+    velocity as arrows \label{fig:taylor-green_vortices }}
+\end{figure}
 
 Insertion of these two fields into the Navier-Stokes equation shows
 that indeed this is a solution. It is interesting that the pressure
@@ -41,6 +50,8 @@ vorticity satisfies the convection-diffusion equation
 \[
   \frac{d \omega}{d t}= \nu \nabla^2 \omega.
 \]
+
+
 
 \subsection{Reduced units}
 
@@ -66,3 +77,5 @@ where the Reynolds number appears naturally:
 
 The decay time is then seen to be $ \tau^*=\mathrm{Re}/(8\pi^2)$ in
 reduced units.
+
+
