--- a/potential_flow.tex
+++ b/potential_flow.tex
@@ -334,11 +334,12 @@ also from the identity for the curl of the curl
 \end{equation}
 
 Then, since the velocity field is curl-free:
-\[
-   \nabla \times \bfu = 0 =
-   \nabla (\nabla \cdot \mathbf {A} )- \nabla^{2}\mathbf {A} =
-   - \bhe_z \nabla^{2} \psi,
-\]
+\begin{equation}
+  \label{eq:if_no_curl_then_stream_harmonic}
+  0 = \nabla \times \bfu =
+  \nabla (\nabla \cdot \mathbf {A} )- \nabla^{2}\mathbf {A} =
+  - \bhe_z \nabla^{2} \psi,
+\end{equation}
 where we use the fact that the $\bfA$ field of \ref{eq:A_psi_2D} is
 divergence-free.
 
@@ -565,7 +566,8 @@ two coordinates. In spherical coordinates:
   \bfA = A \bhe_\phi ,
 \]
 i.e. it is purely azimuthal. It is also divergence-free, so that is
-satisfies Laplace's equation for a curl-free flow.
+satisfies Laplace's equation for a curl-free flow, by the argument
+exactly as in Eq. \ref{eq:if_no_curl_then_stream_harmonic}.
 
 However, the choice of $A=\psi$ does \emph{not} result in the correct
 stream-line behavior of Eq.  \ref{eq:stream_perp_to_u}.
@@ -679,15 +681,14 @@ sphere are in Fig. \ref{fig:potential_streamlines_moving_sphere}.
 
 \begin{itemize}
 \item \label{ex:u_from_psi_cylinder} Derive the velocity field for
-  potential flow around a cylinder from $\psi$, solving Laplace's
-  equation, plus the appropriate boundary conditions.
-
+  potential flow around a cylinder from $\psi$, solving Laplace
+  equation for this field, plus the appropriate boundary conditions.
   
 \item \label{ex:u_from_psi_sphere} Derive the velocity field for
-  potential flow around a sphere from $\psi$, solving Laplace's
-  equation, plus the appropriate boundary conditions. Notice that
-  Laplace equation $\nabla^2 \bfA = 0$ may be written for $\psi$ using
-  this identity:
+  potential flow around a sphere from $\psi$, solving Laplace equation
+  for this field with the appropriate boundary conditions. Use the
+  fact that Laplace equation $\nabla^2 \bfA = 0$ may be written for
+  $\psi$ using this identity:
   \begin{equation}
     \label{eq:psi_eq_from_A}
     \nabla^2 \left(  \frac{\psi(r,\theta)}{r \sin\theta } \bhe_\phi \right) =
@@ -707,15 +708,31 @@ sphere are in Fig. \ref{fig:potential_streamlines_moving_sphere}.
   field is azimuthal only, and dependent on the other two components:
   $ \bfA = A(r,\theta) \bhe_\phi$.
 
-\item  \label{ex:azimuthal_velocity}) Prove that the velocity
-may indeed have an azimuthal component for axisymmetric flow. Begin by writing down the
-expressions for the divergence and the curl in spherical coordinates,
-and neglecting all variation on the azimuthal angle, allowing for the
-possibility that the vector potential may have all three components, not just than $A_\phi$.
-This result in a $u_\phi$ velocity component that can have basically any expression
-as far as continuity equation is concerned, since this is always satisfied
+\item Repeat the previous two calculation using cylindrical
+  coordinates. Prove that
+  \begin{equation}
+    \label{eq:psi_eq_from_A_cyl}
+    \nabla^2 \left(  \frac{\psi(\rho ,z) }{\rho} \bhe_\phi \right) =
+    \frac{1}{ \rho } 
+    \left(
+      \frac{\partial^2  }{\partial \rho^2} -
+      \frac{1}{ \rho } 
+      \frac{\partial  }{\partial \rho} +
+      \frac{\partial^2  }{\partial z^2}
+    \right) \psi \bhe_\phi .
+  \end{equation}
+  
 
-\item  Repeat the previous calculation for cylindrical coordinates.
+\item \label{ex:azimuthal_velocity}) Prove that the velocity may
+  indeed have an azimuthal component for axisymmetric flow. Begin by
+  writing down the expressions for the divergence and the curl in
+  spherical coordinates, and neglecting all variation on the azimuthal
+  angle, allowing for the possibility that the vector potential may
+  have all three components, not just than $A_\phi$.  This result in a
+  $u_\phi$ velocity component that can have basically any expression
+  as far as continuity equation is concerned, since this is always
+  satisfied
+
 
 
 
