typos, minus sign

--- a/potential_flow.tex
+++ b/potential_flow.tex
@@ -79,9 +79,9 @@ r \cos(\theta)$ term. Lastly, it must itself be a solution of the
 Laplace equation. With the Laplacian operator in
 polar coordinates:
 \[
-\nabla^2 (f \cos(theta ) ) =
-\frac{ \cos(theta ) }{r} \frac{\partial r f}{\partial r} -
-\frac{ f \cos(theta ) }{r^2} = 0
+\nabla^2 (f \cos(\theta ) ) =
+\frac{ \cos(\theta ) }{r} \frac{\partial r f}{\partial r} -
+\frac{ f \cos(\theta ) }{r^2} = 0
 \]
 This equation has solutions $f=r$ (which we already knew), and
 $f=1/r$. Of course, a prefactor may be added, so our guess is now
@@ -104,7 +104,7 @@ The velocity results immediately from this expression. From the
 expressions above:
 \begin{align}
 u_r     &=   u_0  \left[ 1 - \left( \frac{R}{r}\right)^2 \right] \cos(\theta) \\
-u_\theta &=   u_0  \left[ 1 + \left( \frac{R}{r}\right)^2 \right] \sin(\theta) .
+u_\theta &=  - u_0  \left[ 1 + \left( \frac{R}{r}\right)^2 \right] \sin(\theta) .
 \end{align}
 
 Notice this field has a clear up-down, and left-right symmetry, which
