--- a/intro.tex
+++ b/intro.tex
@@ -47,6 +47,8 @@ secundary.
 
 \section{Notation}
 
+Symbols for the velocity, and so on.
+
 \section{Style}
 
 In these notes, concepts are introduced \emph{at needed}. This is at
@@ -57,3 +59,6 @@ until the potential flow past a cylinder is discussed. In fact, only
 the simple 2D case is introduced --- the more complicated axisymmetric
 situation is later described, for the flow past a sphere.
 
+The few starred sections refer to ``advanced'' material, some of which
+may be the authors' own calculations (therefore, to be read with
+care).
