--- a/potential_flow.tex
+++ b/potential_flow.tex
@@ -85,9 +85,10 @@ polar coordinates:
 \]
 This equation has solutions $f=r$ (which we already knew), and
 $f=1/r$. Of course, a prefactor may be added, so our guess is now
-\[
-\phi = \left( u_0 r + \frac{A}{r} \right) \cos(\theta) .
-\]
+\begin{equation}
+  \label{eq:pot_phi_guess}
+  \phi = \left( u_0 r + \frac{A}{r} \right) \cos(\theta) .    
+\end{equation}
 
 Now, in order its radial derivative vanish at $r=R$,
 \[
@@ -188,10 +189,11 @@ as we will see.)
 
 In case some mathematical justification is required, the pressure
 at the surface on the cylinder is
-\[
- p= p_0 + \frac12  u_0^2 \left(1 -  4   \sin^2(\theta) \right) =
- p_0 -\frac12 u_0^2 + u_0^2 \cos(2\theta)  .
-\]
+\begin{equation}
+  \label{eq:press_at_cyl_pot}
+  p= p_0 + \frac12  u_0^2 \left(1 -  4   \sin^2(\theta) \right) =
+  p_0 -\frac12 u_0^2 + u_0^2 \cos(2\theta)  .
+\end{equation}
 In the last equation, the identity
 $\sin^{2}\theta ={\frac {1-\cos(2\theta )}{2}}$ has been used.
 
