--- a/sound_waves_att.tex
+++ b/sound_waves_att.tex
@@ -1,4 +1,4 @@
-\section{Attenuation of sound waves}
+\section{Attenuation of sound waves*}
 \label{sec:sound_waves_att}
 
 This section contains a simple discussion of the role of viscosity in
