--- a/intro.tex
+++ b/intro.tex
@@ -46,8 +46,26 @@ secundary.
 
 
 \section{Notation}
+\label{sec:notation}
 
-Symbols for the velocity, and so on.
+The velocity field is represented in many ways. Here,
+we use bold letters for the whole vector, and subindices
+for its components, Cartesian or otherwise:
+\begin{align*}
+  \bfu = ( u_x, u_y, u_z) \qquad \text{Cartesian} \\
+  \bfu = ( u_r, u_\theta, u_z) \qquad \text{Polar, cylindrical} \\
+  \bfu = ( u_r, u_\theta, u_\phi) \qquad \text{Polar, spherical} .
+\end{align*}
+
+
+
+  This naming convention is the most common in physics, and is
+  pecified by ISO standard 80000-2:2009, and earlier in ISO 31-11
+  (1992). However, the name of the two angles is often reversed,
+  specially in mathematics. The advantage of the latter is that
+  $\theta$ then retains the same name as in 2D polar coordinates ---
+  even though some mathematicians consistently use $\phi$ for the 2D
+  polar angle
 
 \section{Style}
 
