--- a/potential_flow.tex
+++ b/potential_flow.tex
@@ -509,11 +509,8 @@ Spherical coordinates \index{spherical coordinate system} are used:
 $r$ is the distance to the origin, $\theta$ is the polar angle (angle
 with the $z$ axis), and the azimuthal angle (angle around the $z$
 axis), here absent due to symmetry, is $\phi$ %.
-\footnote{This naming convention is the most common in physics, and is
-  pecified by ISO standard 80000-2:2009, and earlier in ISO 31-11
-  (1992). However, the name of the two angles is often reversed,
-  specially in mathematics. The advantage of the latter is that
-  $\theta$ then retains the same name as in 2D polar coordinates.}.
+\footnote{See \ref{sec:notation} for naming conventions is spherical
+coordinates.}.
 
 
 Similarly to the cylinder, let us try a function
