--- a/front.tex
+++ b/front.tex
@@ -6,7 +6,9 @@
 \newcommand\nbstretchyspace{\spaceskip0.5em plus 0.25em minus 0.25em}
 % To improve spacing on titlepages
 \newcommand{\nbtitlestretch}{\spaceskip0.6em}
-\pagestyle{empty}
+
+%\pagestyle{empty}
+\begin{titlepage}
 \begin{center}
 \bfseries
 \nbvspace[1]
@@ -36,3 +38,4 @@ UPM, MADRID\\
 
 \nbvspace[1]
 \end{center}
+\end{titlepage}
