--- a/Fluid_Mechanics.tex
+++ b/Fluid_Mechanics.tex
@@ -1,20 +1,49 @@
-\documentclass[a4paper,10pt,twoside]{book}
+\documentclass[a4paper,10pt]{book}
 \usepackage{graphicx} %\usepackage[utf8]{inputenc}
 
 % headers and footers
 \usepackage{fancyhdr}
- 
+\setlength{\headheight}{15.2pt}
+
+
 \pagestyle{fancy}
+\renewcommand{\chaptermark}[1]{ \markboth{#1}{} }
+
+\renewcommand{\sectionmark}[1]{ \markright{#1} }
+%\renewcommand*{\chaptermark}[1]{ \markboth{\chaptername\ \thechapter: ##1}{} }%
 \fancyhf{}
-\fancyhead[LE,RO]{\thechapter}
-\fancyhead[RE,LO]{\thesection}
-\fancyfoot[CE,CO]{\leftmark}
-\fancyfoot[LE,RO]{\thepage}
+\fancyhead[RE,LO]{} %\thepage }
+\fancyhead[LE]{\textit{\thepage \phantom{mmmm}  \thechapter.\ \nouppercase{\leftmark}}}
+\fancyhead[RO]{\textit{\S  \thesection \phantom{m} \nouppercase{\rightmark} \phantom{mmmm} \thepage } }
+
+
+
+\fancypagestyle{plain}{%  the preset of fancyhdr 
+    \fancyhf{} % clear all header and footer fields
+    \fancyfoot[C]{ \thepage} %\textbf{\thepage}} % except the center
+    \renewcommand{\headrulewidth}{0pt}
+    \renewcommand{\footrulewidth}{0pt}}
+
+
+% \fancypagestyle{myheadings}{%
+%  \fancyhf{}
+%  \renewcommand{\headrulewidth}{0.05pt}
+%  \renewcommand{\footrulewidth}{0.02pt}
+%  \addtolength{\headheight}{0.5pt}
+%  \fancyhead[LE,RO]{\thechapter}
+%  \fancyhead[RE,LO]{Section \thesection}
+%  \fancyfoot[CE,CO]{\leftmark}
+%  \fancyfoot[RO,LE]{\thepage}
+%}
+
+
  
-\renewcommand{\headrulewidth}{2pt}
-\renewcommand{\footrulewidth}{1pt}
+%\pagestyle{myheadings}
+  \pagestyle{fancy}
 
 
+
+  
 %center all figures:
 \makeatletter
 \g@addto@macro\@floatboxreset\centering
@@ -50,8 +79,9 @@
 
 \input{glossary}
 
-
 \begin{document}
+
+\frontmatter
 
 \include{front}
 
@@ -59,6 +89,8 @@
 
 %\printglossary[type=symbols,style=long,title={List of Symbols}]
 \printunsrtglossary[type=symbols,style=long]
+
+\mainmatter
 
 \include{intro}
 
