Magnus force added

--- a/potential_flow.tex
+++ b/potential_flow.tex
@@ -485,7 +485,7 @@ of the fluid at the surface of the cylinder
 (Eq. \ref{eq:u_theta_cyl_pot_circ}) with the cylinder surface
 velocity:
 \[
-\frac{\Gamma}{2\pi R} = \omega_0 R $
+\frac{\Gamma}{2\pi R} = \omega_0 R 
 \]
 This is a sort of ``no-slip'' condition --- but, incomplete,
 since the correct condition would be the whole tangential velocity
