confusion between Eulerian and Lagrangian

--- a/particle.tex
+++ b/particle.tex
@@ -206,7 +206,7 @@ Notice the notation: indices $xy$ implay a strain on that plane. In general,
 \right) .
 \]
 
-This defines off-diagonal terms of a tensor which is obviously
+This defines off-diagonal terms of a tensor that is obviously
 symmetric. All together, three terms in 3D ($xy$, $xz$, and $yz$).
 
 Also, from the definition of the tensor $\nabla \bfu$ of
@@ -290,8 +290,8 @@ m\frac1{V^2}  \frac{ dV }{dt } =
 which indeed is the right expression (the ``convergence'' Equation
 \ref{eq:convergence}.)
 
-This also shows that we are working on an Eulerian reference frame, so
-that it is total derivatives which feature. Indeed, $dm/dt=0$ for a
-particle, while mass may enter and leave a fixed (Lagrangian) zone in
+This also shows that we are working on an Lagrangian reference frame, so
+that advective derivatives appear naturally. Indeed, $dm/dt=0$ for a
+particle, whereas mass may enter and leave a fixed (Eulerian) zone in
 space.
 
